RESOLVED FIXED222004
Clients of ARC-dependent WTF functions may get incorrect/crashy behavior
https://bugs.webkit.org/show_bug.cgi?id=222004
Summary Clients of ARC-dependent WTF functions may get incorrect/crashy behavior
Chris Dumez
Reported 2021-02-16 15:11:00 PST
Clients of ARC-dependent WTF functions may get incorrect/crashy behavior.
Attachments
Patch (3.41 KB, patch)
2021-02-16 15:17 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-02-16 15:11:11 PST
Chris Dumez
Comment 2 2021-02-16 15:17:33 PST
Geoffrey Garen
Comment 3 2021-02-16 16:14:06 PST
Comment on attachment 420547 [details] Patch r=me
EWS
Comment 4 2021-02-16 22:16:12 PST
Committed r272985: <https://commits.webkit.org/r272985> All reviewed patches have been landed. Closing bug and clearing flags on attachment 420547 [details].
Note You need to log in before you can comment on or make changes to this bug.