Clients of ARC-dependent WTF functions may get incorrect/crashy behavior https://bugs.webkit.org/show_bug.cgi?id=222004 <rdar://73620184>

Reviewed by Geoffrey Garen.

ARC is enabled in WTF but not in our other frameworks. This can lead to bad/crashy
behavior. To address the issue, renames functions like adoptNS() to adoptNSArc()
when ARC is enabled, via a #define.

This patch was written by Geoff Garen.

* wtf/BlockPtr.h:
* wtf/OSObjectPtr.h:
* wtf/RetainPtr.h:
* wtf/WeakObjCPtr.h:


Canonical link: https://commits.webkit.org/234188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272985 268f45cc-cd09-0410-ab3c-d52691b4dbfc