Source/WTF/wtf/BlockPtr.h
@@ -47,6 +47,12 @@
 #define WTF_ISA_POINTER_QUALIFIER
 #endif
 
+// Because ARC enablement is a compile-time choice, and we compile this header
+// both ways, we need a separate copy of our code when ARC is enabled.
+#if __has_feature(objc_arc)
+#define BlockPtr BlockPtrArc
+#endif
+
 namespace WTF {
 
 extern "C" void* _NSConcreteMallocBlock[32];
